Fix several bugs on IE

--- a/client/src/app/component/ie/ie.scss
+++ b/client/src/app/component/ie/ie.scss
@@ -8,4 +8,9 @@
   .ew-body{
     min-height: 500px;
   }
+
+  .list__action-header, .list__action{
+    float: right;
+    text-align: right;
+  }
 }
